--- a/src/app/components/customer/customer.component.html
+++ b/src/app/components/customer/customer.component.html
@@ -1,1 +1,13 @@
-<p>customer works!</p>
+<mat-card>
+    <mat-card-header>
+      <mat-card-title>User Profile</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p><strong>First Name:</strong> {{ user.firstName }}</p>
+      <p><strong>Last Name:</strong> {{ user.lastName }}</p>
+      <p><strong>Email:</strong> {{ user.email }}</p>
+      <p><strong>Mobile Number:</strong> {{ user.mobileNo }}</p>
+      <p><strong>Address:</strong> {{ user.address }}</p>
+    </mat-card-content>
+  </mat-card>
+  
