--- a/src/app/components/landing/landing.component.css
+++ b/src/app/components/landing/landing.component.css
@@ -1,50 +1,248 @@
-/* landing-page.component.css */
-
 .landing-page {
-    background-image: url('../../../assets/fixmasterLand.png');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.3); /* Add a semi-transparent background overlay */
-  }
-  
-  .content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  
-  .card {
-    width: 300px;
-    height: 150px;
-    margin: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    cursor: pointer;
-    transition: transform 0.2s ease;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
-    
-  }
-  
-  .card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  .customer-card {
-    background-color: rgba(24, 137, 218, 0.9); 
-    color: #ffffff;
-  }
-  
-  .service-provider-card {
-    background-color: rgba(24, 137, 218, 0.9); 
-    color: #ffffff;
-  }
-  
+  font-family: 'Your-Unique-Font-Family', Arial, sans-serif; /* Replace 'Your-Unique-Font-Family' with your desired font */
+}
+
+/* Header styles */
+.header {
+  background-color: rgba(51, 51, 51, 0.8); /* Slightly transparent dark grey */
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+  transition: background-color 0.3s; /* Add a transition for the background color change */
+}
+
+.header:hover {
+  background-color: #333; /* Dark grey on hover */
+}
+
+.header h1 {
+  font-size: 36px;
+  font-weight: bold; /* Make the header text bold */
+  color: #fff;
+}
+
+/* Navbar styles */
+.navbar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.navbar li {
+  display: inline;
+  margin-right: 20px;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold; /* Make the navigation text bold */
+  font-size: 18px;
+  transition: color 0.3s; /* Add a transition for text color change */
+}
+
+.navbar a:hover {
+  color: #00a0e6; /* Blue color on hover */
+}
+
+
+/* Hero section styles */
+.hero {
+  background-image: url('../../../assets/cusReg.png');
+  background-size: cover;
+  background-position: center;
+  color: #fff;
+  text-align: center;
+  padding:  0;
+  height: 500px;
+
+}
+
+.hero h2 {
+  padding-top: 300px;
+  font-size: 48px;
+  color: #ffffff; /* Blue color */
+  font-weight: bold; /* Make the heading text bold */
+}
+
+/* CTA button styles */
+.cta-button {
+  background-color: #333; /* Dark Grey */
+  color: #00a0e6; /* Blue color */
+  padding: 15px 30px;
+  font-size: 24px;
+  text-decoration: none;
+  margin-top: 20px;
+  display: inline-block;
+  border-radius: 5px;
+  border: 2px solid #00a0e6; /* Blue color */
+  font-weight: bold; /* Make the button text bold */
+}
+
+.cta-button:hover {
+  background-color: #a0a0a0; /* Black color */
+}
+
+/* Features section styles */
+.features {
+  background-color: #222; /* Dark Grey */
+  padding: 40px;
+  text-align: center;
+}
+
+.features h3 {
+  font-size: 36px;
+  margin-bottom: 30px;
+  color: #00a0e6; /* Blue color */
+  font-weight: bold; /* Make the heading text bold */
+}
+
+/* Feature card styles */
+.feature-card {
+  background-color: #444; /* Dark Grey */
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  display: inline-block;
+  width: 30%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+.feature-card i {
+  color: #00a0e6; /* Blue color */
+  font-size: 24px;
+  margin-right: 10px;
+}
+
+/* Testimonials section styles */
+.testimonials {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 40px;
+}
+
+.testimonials h3 {
+  font-size: 36px;
+  margin-bottom: 30px;
+  color: #00a0e6; /* Blue color */
+  font-weight: bold; /* Make the heading text bold */
+}
+
+/* Testimonial styles */
+.testimonial {
+  margin: 20px;
+  display: inline-block;
+  width: 45%;
+}
+
+.testimonial img {
+  border-radius: 50%;
+  width: 80px;
+}
+
+/* CTA section styles */
+.cta {
+  background-color: #222; /* Dark Grey */
+  color: #fff;
+  text-align: center;
+  padding: 100px 0;
+}
+
+.cta h2 {
+  font-size: 48px;
+  margin-bottom: 20px;
+  color: #00a0e6; /* Blue color */
+  font-weight: bold; /* Make the heading text bold */
+}
+
+/* CTA button styles (repeated for consistency) */
+.cta-button {
+  background-color: #00a0e6; /* Blue color */
+  color: #fff;
+  padding: 15px 30px;
+  font-size: 24px;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold; /* Make the button text bold */
+}
+
+.cta-button:hover {
+  background-color: #696969; /* Black color */
+}
+
+/* Footer styles */
+.footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+}
+/* Header styles */
+.mat-toolbar {
+  background-color: rgba(51, 51, 51, 0.8); /* Slightly transparent dark grey */
+  color: #fff;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 100;
+}
+
+.mat-toolbar-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+}
+
+
+.logo h1 {
+  font-size: 24px;
+  color: #fff;
+}
+
+/* Navigation button styles */
+.mat-toolbar-row button {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.mat-toolbar-row button:hover {
+  color: #00a0e6; 
+}
+/* Feature description styles */
+.feature-description {
+  font-size: 18px; 
+  color: #fff; 
+  font-style: oblique; 
+  line-height: 1.4; 
+}
+
+.feature-card {
+  background-color: #444; 
+  padding: 20px;
+  margin: 20px;
+  border-radius: 10px;
+  display: inline-block;
+  width: 30%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: left; 
+}
+.custom-dialog {
+  z-index: 800;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: rgba(255, 255, 255, 0.2); /* Text color */
+  border: 1px solid #000; /* Black border */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px; 
+  width: 70%; 
+}
+.custom-dialog h2 {
+  color: #3498db; 
+}
