--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,19 +1,5 @@
 <div class="landing-page">
-    <header class="header">
-        <div class="logo">
-            <img src="../../../assets/logo.png" alt="Your Brand Logo" width="100" height="100">
-            <h1>Fix Master</h1>
-        </div>
-        <nav class="navbar">
-            <ul>
-                <li><a routerLink="/">Home</a></li>
-                <li><a routerLink="/myprofile">My Profile</a></li>
-                <li><a routerLink="/testimonials">Appointments</a></li>
-                <li><a routerLink="/get-started">Services</a></li>
-                <li><a routerLink="/get-started">Help</a></li>
-            </ul>
-        </nav>
-    </header>
+   
     <div class="hero">
         <h2>Welcome to Fix Master World</h2>
         <p>Explore a world of incredible features and top-notch services that can transform your home.</p>
@@ -67,3 +53,4 @@
         <p>&copy; 2023 Your Brand. All rights reserved.</p>
     </footer>
 </div>
+<router-outlet></router-outlet>
