--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,47 +1,51 @@
-/* Add custom styles for the header */
-.mat-toolbar {
-    background-color: #1889da; /* Header background color */
-    color: white; 
-    height: 64px;
-    z-index: 2000;
-    position: fixed;
-  }
+.header {
+  background-color: rgba(51, 51, 51, 0.8); /* Slightly transparent dark grey */
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1000;
+  transition: background-color 0.3s; 
   
-  /* Logo styles */
-  .logo {
-    display: flex;
-    align-items: center;
-    font-size: 24px;
-    font-weight: bold;
-    text-transform: uppercase;
-  }
-  
-  .logo mat-icon {
-    margin-right: 8px; /* Add space between icon and text */
-  }
-  
-  /* Spacer to push buttons to the right */
-  .spacer {
-    flex: 1 1 auto;
-  }
-  
-  /* Navigation buttons styles */
-  .mat-toolbar-row button {
-    color: white;
-    text-transform: uppercase;
-    font-weight: 500;
-    margin-left: 16px; /* Add space between buttons */
-    font-size: 14px; /* Button font size */
-    padding: 0 12px; /* Add horizontal padding to buttons */
-  }
-  
-  .mat-toolbar-row button:hover {
-    background-color: rgba(255, 255, 255, 0.1); /* Hover background color */
-    color: white; /* Hover text color */
-  }
-  
-  /* Adjust hover effect */
-  .mat-toolbar-row button:not(:hover) {
-    transition: background-color 0.2s ease;
-  }
-  
+}
+
+.header:hover {
+  background-color: #333; /* Dark grey on hover */
+}
+
+.header h1 {
+  font-size: 36px;
+  font-weight: bold; /* Make the header text bold */
+  color: #fff;
+  font-family:sans-serif
+}
+
+/* Navbar styles */
+.navbar{
+  text-align: center;
+  justify-content: center;
+}
+.navbar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.navbar li {
+  display: inline;
+  margin-right: 20px;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold; /* Make the navigation text bold */
+  font-size: 18px;
+  transition: color 0.3s; /* Add a transition for text color change */
+}
+
+.navbar a:hover {
+  color: #00a0e6; /* Blue color on hover */
+}
+
