--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,29 +1,15 @@
-<mat-toolbar color="primary">
-  <mat-toolbar-row>
-    <!-- Logo -->
-    <span class="logo">
-      <mat-icon>home</mat-icon>
-      FixMasters
-    </span>
-    <!-- Spacer to push buttons to the right -->
-    <span class="spacer"></span>
-    <!-- Navigation buttons -->
-    <button mat-button routerLink="">
-      Home
-    </button>
-    <button mat-button routerLink="/services">
-      Services
-    </button>
-    <button mat-button routerLink="/appointments">
-      Appointments
-    </button>
-    <button mat-button routerLink="/payment">
-      My Profile
-    </button>
-    <button mat-button routerLink="/reviews">
-      Settings
-    </button>
-    <!-- Add more navigation items as needed -->
-  </mat-toolbar-row>
-</mat-toolbar>
-
+<header class="header">
+  <div class="logo">
+      <img src="../../../assets/logo.png" alt="Your Brand Logo" width="100" height="100">
+      <h1>Fix Master</h1>
+  </div>
+  <nav class="navbar">
+      <ul>
+          <li><a routerLink="/">Home</a></li>
+          <li><a (click)="goToUserProfile()">My Profile</a></li>
+          <li><a routerLink="/testimonials">Appointments</a></li>
+          <li><a routerLink="/services">Services</a></li>
+          <li><a routerLink="/get-started">Help</a></li>
+      </ul>
+  </nav>
+</header>
