--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
       <ul>
           <li><a routerLink="/">Home</a></li>
           <li><a (click)="goToUserProfile()">My Profile</a></li>
-          <li><a routerLink="/testimonials">Appointments</a></li>
+          <li><a routerLink="/appointments">Appointments</a></li>
           <li><a routerLink="/services">Services</a></li>
           <li><a routerLink="/get-started">Help</a></li>
       </ul>
